--- a/app/src/main/res/drawable/bg_splash.xml
+++ b/app/src/main/res/drawable/bg_splash.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <color android:color="@color/colorWhite"/>
+        <color android:color="@color/colorFundo"/>
     </item>
     <item>
-        <bitmap android:src="@drawable/logo_app"
+        <bitmap android:src="@drawable/controlx_logo_ic"
             android:gravity="center"/>
     </item>
 </layer-list>
