--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!-- Base App Colors -->
+    <color name="colorPrimary">#FF9300</color>
+    <color name="colorPrimaryDark">#FF7C00</color>
+    <color name="colorAccent">#FF4D00</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorFundo">#F7F7F7</color>
+    <color name="colorGray">#E6E6E6</color>
+    <color name="colorPrimary_offline">#FF2929</color>
+    <color name="colorPrimaryDark_offline">#E60000</color>
+    <color name="colorBackground">#FFFFFF</color>
+
+    <!-- Button Color -->
+    <color name="defaultButtonColor">#FFA100</color>
+
+    <!-- FAB -->
+    <color name="fab_green_button_normal">#00C21D</color>
+    <color name="fab_green_button_pressed">#00A118</color>
+    <color name="fab_blue_button_normal">#0099CC</color>
+    <color name="fab_blue_button_pressed">#0078CC</color>
+
+    <!-- NumberPicker -->
+    <color name="np_textvalue_bg_color">#FDFDFD</color>
+    <color name="np_textvalue_fg_color">#878787</color>
+    <color name="np_left_bg_color">#F53B3B</color>
+    <color name="np_left_bg_color_pressed">#F23333</color>
+    <color name="np_right_bg_color">#59C969</color>
+    <color name="np_right_bg_color_pressed">#45A854</color>
+
+    <!-- Simple Colors -->
+    <color name="md_white">#FFFFFF</color>
+    <color name="md_red">#FF0000</color>
+    <color name="md_green">#00A118</color>
+    <color name="md_black">#000000</color>
+    <color name="md_light_black">#1F1F1F</color>
+
+    <!-- Layout Colors -->
+    <color name="item_header_text_color">#FFFFFF</color>
+    <color name="item_header_bg_color">#ED1C24</color>
+    <color name="error_text_color">#AA0000</color>
+    <color name="success_text_color">#00A118</color>
+    <color name="warning_text_color">#938a00</color>
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="black_header_color">#B2000000</color>
+
+    <color name="disabled_radius_button_color">#878787</color>
 </resources>
