--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -4,34 +4,90 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFundo"
+    android:background="@drawable/bg_login"
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionbar_login"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorFundo"
+        android:background="@android:color/transparent"
         android:elevation="0dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginHorizontal="24dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="6dp">
+        android:outlineAmbientShadowColor="@color/colorPrimary"
+        app:cardCornerRadius="6dp">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingVertical="16dp">
+            android:padding="10dp">
+
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:src="@drawable/logo_app"
+                android:layout_gravity="center"
+                android:layout_marginBottom="16dp"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textNoSuggestions"
+                    android:hint="Login"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="Senha"/>
+
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/card_login"
+        android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="24dp"
+        android:background="@drawable/ripple_button_login"
+        android:text="@string/label_button_login"
+        android:elevation="6dp"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="24dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:layout_marginVertical="5dp"
+        android:text="@string/info_versao"
+        android:textColor="@color/colorWhite"
+        android:textSize="12dp"/>
 
 </RelativeLayout>
