--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -4,17 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_login"
+    android:background="@color/colorFundo"
     android:fitsSystemWindows="true">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/actionbar_login"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/transparent"
-        android:elevation="0dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_login"
@@ -76,8 +67,8 @@
         android:background="@drawable/ripple_button_login"
         android:text="@string/label_button_login"
         android:elevation="6dp"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="24dp"/>
+        android:textColor="@color/black_header_color"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -87,7 +78,7 @@
         android:gravity="center"
         android:layout_marginVertical="5dp"
         android:text="@string/info_versao"
-        android:textColor="@color/colorWhite"
+        android:textColor="@android:color/darker_gray"
         android:textSize="12dp"/>
 
 </RelativeLayout>
