--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#FF9300</color>
     <color name="colorPrimaryDark">#FF7C00</color>
     <color name="colorAccent">#FF4D00</color>
+    <color name="colorAccentLight">#30FF4D00</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorFundo">#F7F7F7</color>
     <color name="colorGray">#E6E6E6</color>
