--- a/app/src/main/res/drawable/ripple_button_login.xml
+++ b/app/src/main/res/drawable/ripple_button_login.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/colorFundo"
+    android:color="@color/colorWhite"
     tools:ignore="NewApi">
 
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="6dp"/>
-            <solid android:color="@color/md_white"/>
+            <solid android:color="@color/colorPrimary"/>
         </shape>
     </item>
 
