--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -7,20 +7,30 @@
     android:background="@color/colorFundo"
     android:fitsSystemWindows="true">
 
+    <ImageView
+        android:id="@+id/imagem_configuracoes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_settings_orange"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:layout_alignParentRight="true"/>
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginHorizontal="24dp"
-        android:outlineAmbientShadowColor="@color/colorPrimary"
+        app:cardElevation="2dp"
         app:cardCornerRadius="6dp">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp">
+            android:paddingVertical="24dp"
+            android:paddingHorizontal="16dp">
 
             <ImageView
                 android:layout_width="130dp"
@@ -67,7 +77,8 @@
         android:background="@drawable/ripple_button_login"
         android:text="@string/label_button_login"
         android:elevation="6dp"
-        android:textColor="@color/black_header_color"
+        android:clickable="true"
+        android:textColor="@color/colorWhite"
         android:layout_marginTop="10dp"/>
 
     <TextView
