--- a/app/src/main/res/drawable/ripple_button_venda_orange.xml
+++ b/app/src/main/res/drawable/ripple_button_venda_orange.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/colorWhite"
+    android:color="@color/md_white"
     tools:ignore="NewApi">
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorPrimaryDark"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
 
