--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorFundo"
     android:fitsSystemWindows="true">
 
-    <ImageView
-        android:id="@+id/imagem_configuracoes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_settings_orange"
-        android:layout_margin="10dp"
-        android:clickable="true"
-        android:layout_alignParentRight="true"/>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_login"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginHorizontal="24dp"
-        app:cardElevation="2dp"
-        app:cardCornerRadius="6dp">
+        android:background="@android:color/transparent"
+        android:elevation="0dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+    <ScrollView
+        android:layout_below="@+id/toolbar_login"
+        android:layout_above="@+id/button_login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingVertical="24dp"
-            android:paddingHorizontal="16dp">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp">
+
 
             <ImageView
-                android:layout_width="130dp"
-                android:layout_height="130dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
                 android:src="@drawable/logo_app"
                 android:layout_gravity="center"
+                android:padding="16dp"
                 android:layout_marginBottom="16dp"/>
 
             <android.support.design.widget.TextInputLayout
@@ -47,49 +48,37 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textNoSuggestions"
-                    android:hint="Login"/>
+                    android:hint="Login"
+                    android:inputType="textNoSuggestions"/>
 
             </android.support.design.widget.TextInputLayout>
 
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:hint="Senha"/>
+                    android:hint="Senha"
+                    android:inputType="numberPassword"/>
 
             </android.support.design.widget.TextInputLayout>
 
+
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </ScrollView>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/card_login"
-        android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="24dp"
-        android:background="@drawable/ripple_button_login"
-        android:text="@string/label_button_login"
-        android:elevation="6dp"
-        android:clickable="true"
-        android:textColor="@color/colorWhite"
-        android:layout_marginTop="10dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:id="@+id/button_login"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:layout_marginVertical="5dp"
-        android:text="@string/info_versao"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="12dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label_button_login"
+        android:background="@drawable/ripple_button_login"
+        android:textColor="@color/colorWhite"/>
 
 </RelativeLayout>
