--- a/app/src/main/res/layout/view_venda.xml
+++ b/app/src/main/res/layout/view_venda.xml
@@ -16,27 +16,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="10dp"
-            android:background="@color/colorPrimaryDark"
             android:weightSum="1">
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#90ffffff"
+            android:layout_marginHorizontal="5dp"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_venda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="10dp"
-            android:paddingHorizontal="10dp"/>
+            android:paddingHorizontal="10dp"
+            android:layout_marginVertical="10dp"/>
 
-        <TextView
-            android:id="@+id/calc_venda_register"
+        <EditText
+            android:id="@+id/venda_register"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/md_white"
             android:textSize="60dp"
+            android:editable="false"
+            android:focusable="false"
             android:gravity="bottom|left"
-            android:padding="10dp"
-            android:text="0x0"/>
+            android:padding="10dp"/>
 
     </LinearLayout>
 
@@ -57,6 +64,7 @@
             android:layout_marginVertical="5dp">
 
             <ImageView
+                android:id="@+id/number_7"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -65,6 +73,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/number_8"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -72,6 +81,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/number_9"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -79,6 +89,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/image_remove"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -96,6 +107,7 @@
             android:layout_marginVertical="5dp">
 
             <ImageView
+                android:id="@+id/number_4"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -103,6 +115,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/number_5"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -110,6 +123,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/number_6"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -134,6 +148,7 @@
             android:layout_marginVertical="5dp">
 
             <ImageView
+                android:id="@+id/number_1"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -141,6 +156,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/number_2"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -148,6 +164,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/number_3"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -172,6 +189,7 @@
             android:layout_marginVertical="5dp">
 
             <ImageView
+                android:id="@+id/number_0"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -193,6 +211,7 @@
                 android:clickable="true"/>
 
             <ImageView
+                android:id="@+id/image_igual"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
