--- a/app/src/main/res/layout/view_venda.xml
+++ b/app/src/main/res/layout/view_venda.xml
@@ -132,7 +132,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/image_menos"
+                android:src="@drawable/image_ce"
                 android:clickable="true"/>
 
         </LinearLayout>
