--- a/app/src/main/res/layout/view_venda.xml
+++ b/app/src/main/res/layout/view_venda.xml
@@ -41,6 +41,7 @@
                 android:textColor="@color/md_white"/>
 
             <ImageView
+                android:id="@+id/image_conexao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
