--- a/app/src/main/res/layout/view_splash.xml
+++ b/app/src/main/res/layout/view_splash.xml
@@ -2,4 +2,27 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:fitsSystemWindows="true">
+
+    <ImageView
+        android:id="@+id/imagelogo"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo"
+        android:layout_centerInParent="true"
+        android:tint="@color/md_white"/>
+
+    <ProgressBar
+        android:layout_alignParentBottom="true"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginVertical="16dp"
+        android:id="@+id/progress"
+        android:max="100"
+        android:min="0"/>
+
+</RelativeLayout>
