--- a/app/src/main/res/layout/view_splash.xml
+++ b/app/src/main/res/layout/view_splash.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorWhite"
     android:fitsSystemWindows="true">
 
     <ImageView
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/logo"
         android:layout_centerInParent="true"
-        android:tint="@color/md_white"/>
+        android:tint="@color/colorPrimary"/>
 
     <ProgressBar
         android:layout_alignParentBottom="true"
