--- a/app/src/main/res/layout/item_slide_intro.xml
+++ b/app/src/main/res/layout/item_slide_intro.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:paddingVertical="16dp">
 
     <ImageView
         android:id="@+id/image_slide_intro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_gravity="center"
+        android:src="@drawable/logo"
+        android:layout_marginBottom="16dp"/>
 
     <TextView
+        android:layout_below="@+id/image_slide_intro"
         android:id="@+id/text_info_slide_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_marginHorizontal="16dp"
         android:gravity="center"
         android:textColor="@color/colorGrayDark"/>
 
-</RelativeLayout>
+</LinearLayout>
