--- a/app/src/main/res/drawable/ripple_button_black.xml
+++ b/app/src/main/res/drawable/ripple_button_black.xml
@@ -6,7 +6,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"/>
+            <solid android:color="@color/black_header_color"/>
         </shape>
     </item>
 
