--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -1,97 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_white">
+    android:background="@color/colorFundo">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_login"
+    <View
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:elevation="0dp" />
+        android:layout_height="match_parent"
+        android:background="@drawable/gradiente_login"/>
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_login"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="16dp"
+        app:cardCornerRadius="16dp">
 
-        <ScrollView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none">
+            android:padding="16dp"
+            android:weightSum="1">
+
+            <ImageView
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:src="@drawable/logo_app"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"/>
 
             <LinearLayout
+                android:layout_weight="1"
                 android:orientation="vertical"
-                android:layout_marginTop="24dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="24dp">
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:paddingHorizontal="16dp">
 
 
-                <ImageView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
-                    android:src="@drawable/logo_app"
-                    android:layout_gravity="center"
-                    android:padding="16dp"
-                    android:layout_marginBottom="16dp"/>
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/layout_login"
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp">
+                    android:background="@drawable/bg_input_login"
+                    android:paddingVertical="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:elevation="4dp"
+                    android:weightSum="1">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_person"
+                        android:layout_centerVertical="true"
+                        android:tint="@color/colorGrayDark"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_gravity="center"/>
 
                     <EditText
-                        android:id="@+id/login"
+                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Login"
-                        android:inputType="textNoSuggestions"/>
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:inputType="textNoSuggestions"
+                        android:hint="Email ou Telefone"/>
 
-                </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
 
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/layout_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Senha"
-                        android:inputType="numberPassword"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-                <Button
-                    android:layout_marginVertical="16dp"
-                    android:id="@+id/button_login"
-                    android:layout_alignParentBottom="true"
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/label_button_login"
-                    android:background="@drawable/ripple_button_login"
-                    android:textColor="@color/colorWhite"/>
+                    android:background="@drawable/bg_input_login"
+                    android:paddingVertical="10dp"
+                    android:elevation="4dp"
+                    android:weightSum="1">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_key"
+                        android:layout_centerVertical="true"
+                        android:tint="@color/colorGrayDark"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_gravity="center"/>
+
+                    <EditText
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:inputType="numberPassword"
+                        android:hint="Senha"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </ScrollView>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/label_button_login"
+                android:background="@drawable/ripple_button_black"
+                android:textColor="@color/colorWhite"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="16dp"/>
 
-        <TextView
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingVertical="10dp"
-            android:textSize="12dp"
-            android:text="@string/info_versao"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingHorizontal="16dp"
+                android:gravity="center"
+                android:text="@string/label_recovery_pass"
+                android:textColor="@color/colorPrimary"
+                android:paddingVertical="5dp"/>
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="10dp"
+                android:gravity="center"
+                android:textSize="12dp"
+                android:textColor="@color/colorGrayDark"
+                android:text="@string/info_versao"/>
 
-</LinearLayout>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+</RelativeLayout>
