--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools"  tools:ignore="NewApi">
 
-    <style name="Splash" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Splash" parent="AppTheme">
         <item name="android:background">@drawable/bg_splash</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:colorAccent">@color/colorWhite</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="Intro" parent="AppTheme">
         <item name="android:statusBarColor">@color/colorPrimary</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowIsTranslucent">true</item>
     </style>
 
     <style name="Login" parent="AppTheme">
@@ -29,7 +25,7 @@
     </style>
 
     <style name="ButtonMenuOrange" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
-        <item name="android:tint">@color/colorPrimary</item>
+        <item name="android:tint">@color/colorAccent</item>
     </style>
 
     <style name="ButtonMenuLogin" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
