--- a/app/src/main/res/layout/view_intro.xml
+++ b/app/src/main/res/layout/view_intro.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFundo"
+    android:background="@drawable/gradiente_login"
     android:fitsSystemWindows="true"
     android:weightSum="1">
 
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorWhite"
             android:textSize="22dp"/>
 
         <TextView
@@ -44,6 +44,7 @@
             android:textSize="16dp"
             android:gravity="center"
             android:paddingVertical="5dp"
+            android:textColor="@color/md_white"
             android:layout_marginHorizontal="16dp"/>
 
     </LinearLayout>
