--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -14,129 +14,142 @@
         android:background="@drawable/gradiente_login"/>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_login"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginVertical="16dp"
-        app:cardCornerRadius="16dp">
-
-        <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/card_login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
-            android:weightSum="1">
-
-            <ImageView
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:src="@drawable/logo_app"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"/>
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginVertical="16dp"
+            app:cardCornerRadius="16dp">
 
             <LinearLayout
-                android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:paddingHorizontal="16dp">
+                android:padding="16dp"
+                android:weightSum="1">
 
+                <ImageView
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:src="@drawable/logo_app"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
 
                 <LinearLayout
-                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_input_login"
-                    android:paddingVertical="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:elevation="4dp"
-                    android:weightSum="1">
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:paddingHorizontal="16dp">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_person"
-                        android:layout_centerVertical="true"
-                        android:tint="@color/colorGrayDark"
-                        android:layout_marginHorizontal="10dp"
-                        android:layout_gravity="center"/>
 
-                    <EditText
-                        android:layout_weight="1"
+                    <LinearLayout
+                        android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@android:color/transparent"
-                        android:inputType="textNoSuggestions"
-                        android:hint="Email ou Telefone"/>
+                        android:background="@drawable/bg_input_login"
+                        android:paddingVertical="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:weightSum="1">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_person"
+                            android:layout_centerVertical="true"
+                            android:tint="@color/colorGrayDark"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_gravity="center"/>
+
+                        <EditText
+                            android:id="@+id/login"
+                            android:layout_weight="1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:inputType="textNoSuggestions"
+                            android:paddingRight="10dp"
+                            android:hint="Email ou Telefone"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_input_login"
+                        android:paddingVertical="10dp"
+                        android:weightSum="1">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_key"
+                            android:layout_centerVertical="true"
+                            android:tint="@color/colorGrayDark"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_gravity="center"/>
+
+                        <EditText
+                            android:id="@+id/password"
+                            android:layout_weight="1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:inputType="numberPassword"
+                            android:paddingRight="10dp"
+                            android:hint="Senha"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:orientation="horizontal"
+                <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_input_login"
+                    android:text="@string/label_button_login"
+                    android:background="@drawable/ripple_button_login"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="16dp"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/label_button_novo_usuario"
+                    android:background="@drawable/ripple_button_black"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="16dp"/>
+
+                <TextView
+                    android:id="@+id/button_recovery_pass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingHorizontal="16dp"
+                    android:gravity="center"
+                    android:text="@string/label_recovery_pass"
+                    android:textColor="@color/colorPrimary"
+                    android:paddingVertical="5dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:paddingVertical="10dp"
-                    android:elevation="4dp"
-                    android:weightSum="1">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_key"
-                        android:layout_centerVertical="true"
-                        android:tint="@color/colorGrayDark"
-                        android:layout_marginHorizontal="10dp"
-                        android:layout_gravity="center"/>
-
-                    <EditText
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@android:color/transparent"
-                        android:inputType="numberPassword"
-                        android:hint="Senha"/>
-
-                </LinearLayout>
+                    android:gravity="center"
+                    android:textSize="12dp"
+                    android:textColor="@color/colorGrayDark"
+                    android:text="@string/info_versao"/>
 
             </LinearLayout>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/label_button_login"
-                android:background="@drawable/ripple_button_black"
-                android:textColor="@color/colorWhite"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginVertical="16dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingHorizontal="16dp"
-                android:gravity="center"
-                android:text="@string/label_recovery_pass"
-                android:textColor="@color/colorPrimary"
-                android:paddingVertical="5dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingVertical="10dp"
-                android:gravity="center"
-                android:textSize="12dp"
-                android:textColor="@color/colorGrayDark"
-                android:text="@string/info_versao"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
 </RelativeLayout>
