--- a/app/src/main/res/drawable/ripple_button_black.xml
+++ b/app/src/main/res/drawable/ripple_button_black.xml
@@ -6,6 +6,7 @@
 
     <item>
         <shape android:shape="rectangle">
+            <corners android:radius="4dp"/>
             <solid android:color="@color/black_header_color"/>
         </shape>
     </item>
