--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -29,8 +29,8 @@
                 android:weightSum="1">
 
                 <ImageView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
                     android:src="@drawable/logo_app"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
@@ -110,6 +110,7 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/button_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/label_button_login"
@@ -119,6 +120,7 @@
                     android:layout_marginTop="16dp"/>
 
                 <Button
+                    android:id="@+id/button_novo_usuario"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/label_button_novo_usuario"
