--- a/app/src/main/res/layout/view_novo_usuario.xml
+++ b/app/src/main/res/layout/view_novo_usuario.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradiente_login">
+    android:background="@color/colorFundo">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_novo_usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:background="@color/colorPrimary"
         android:elevation="0dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
