--- a/app/src/main/res/drawable/bg_input_login.xml
+++ b/app/src/main/res/drawable/bg_input_login.xml
@@ -3,9 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="4dp"/>
-            <solid android:color="@color/colorWhite"/>
-            <stroke android:width="1.5dp"
-                android:color="@color/colorGray"/>
+            <solid android:color="#90FFFFFF"/>
         </shape>
     </item>
 </selector>
