--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -9,20 +9,10 @@
     <com.airbnb.lottie.LottieAnimationView
         android:layout_centerInParent="true"
         android:id="@+id/animation_view"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:lottie_rawRes="@raw/load_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:lottie_rawRes="@raw/load"
         app:lottie_loop="true"
         app:lottie_autoPlay="true" />
-
-    <TextView
-        android:id="@+id/text_loading"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:gravity="center"
-        android:textColor="@color/colorWhite"
-        android:paddingVertical="5dp"
-        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
