--- a/app/src/main/res/layout/view_recuperar_senha.xml
+++ b/app/src/main/res/layout/view_recuperar_senha.xml
@@ -4,15 +4,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFundo">
+    android:background="@color/colorWhite">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_recovery_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:elevation="0dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+        android:background="@color/colorPrimaryDark"
+        android:elevation="4dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -23,30 +22,29 @@
         android:textColor="@color/colorGrayDark"
         android:textSize="16dp"/>
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_email_recupera_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_input_login"
-        android:paddingVertical="10dp"
-        android:layout_marginVertical="16dp"
-        android:layout_marginHorizontal="16dp">
+        android:layout_margin="16dp">
 
         <EditText
-            android:id="@+id/text_recovery"
+            android:id="@+id/edit_text_email_recupera_senha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:layout_marginHorizontal="10dp"
-            android:hint="Email ou Telefone"/>
+            android:hint="Email"
+            android:inputType="textEmailAddress"/>
 
-    </LinearLayout>
+    </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/button_send_recovery"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button_recupera_senha"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:background="@drawable/ripple_button_entrar"
         android:layout_marginHorizontal="16dp"
-        android:src="@drawable/ic_check"/>
+        android:layout_marginVertical="10dp"
+        android:textColor="@color/md_white"
+        android:text="@string/title_recovery_pass"/>
 
 </LinearLayout>
