--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,15 +9,18 @@
         <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
 
+    <style name="LoginIntro" parent="AppTheme">
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+    </style>
+
     <style name="Login" parent="AppTheme">
-        <item name="android:statusBarColor">@color/colorPrimary</item>
-        <item name="actionOverflowButtonStyle">@style/ButtonMenuLogin</item>
-        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+        <item name="actionOverflowButtonStyle">@style/MenuWhiteIcon</item>
     </style>
 
     <style name="CodeSMS" parent="AppTheme">
         <item name="android:statusBarColor">@color/colorPrimary</item>
-        <item name="actionOverflowButtonStyle">@style/ButtonMenuLogin</item>
+        <item name="actionOverflowButtonStyle">@style/MenuWhiteIcon</item>
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -34,7 +37,7 @@
         <item name="android:tint">@color/colorAccent</item>
     </style>
 
-    <style name="ButtonMenuLogin" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
+    <style name="MenuWhiteIcon" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
         <item name="android:tint">@color/md_black</item>
     </style>
 
